<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />


    <EditText
        android:id="@+id/type_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_of_medicine" />

    <Button
        android:id="@+id/alarmOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        />

    <Button
        android:id="@+id/alarmOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnOff"
        />

    <TextView
        android:id="@+id/alarmStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="18sp" />

</LinearLayout>
