<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unifreelancer.masso.medicinereminder.AdminProfile"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/myinfo"
        android:id="@+id/buttonMyInfo"
        android:background="@android:color/holo_blue_bright"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine"
        android:id="@+id/buttonAddMed"
        android:background="@android:color/holo_blue_bright"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/chatpatient"
        android:id="@+id/buttonAskPharma"
        android:background="@android:color/holo_blue_bright"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonHelp"
        android:id="@+id/buttonHelp"
        android:background="@android:color/holo_blue_bright"/>

</LinearLayout>
